2010-05-16  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (decode-arglist): Handle (x . y) macro arglists.

2010-05-14  Tobias C. Rittweiler <tcr@freebits.de>

	* slime-highlight-edits.el, slime-hyperdoc.el, slime-mrepl.el,
          slime-snapshot.el: Fix typo.

2010-05-13  Tobias C. Rittweiler <tcr@freebits.de>

	Perform PATHNAME on file-streams safely.

	* swank-fancy-inspector.lisp (make-visit-file-thunk): Deleted.
	(make-pathname-ispec): New helper.
	(make-file-stream-ispec): New helper.
	(emacs-inspect file-stream): Use them.
	(emacs-inspect stream-error): Ditto.

2010-05-13  Tobias C. Rittweiler <tcr@freebits.de>

	* slime-autodoc.el, slime-c-p-c.el, slime-compiler-notes-tree.el,
	slime-enclosing-context.el, slime-fancy.el, slime-fuzzy.el,
	slime-hyperdoc.el, slime-mdot-fu.el, slime-mrepl.el,
	slime-parse.el, slime-presentations.el, slime-repl.el,
	slime-snapshot.el, slime-tramp.el, slime-xref-browser.el:

	Use newly added `define-slime-contrib' macro to specify
	slime and swank dependencies, and to specify what should happen on
	contrib load/unload.

2010-05-13  Stas Boukarev  <stassats@gmail.com>

	* slime-asdf.el (slime-asdf-collect-notes): New variable.
	Collect and display notes produced by the compiler. Defaulted to T.

2010-05-08  Stas Boukarev  <stassats@gmail.com>

	* slime-presentations.el (slime-presentation-write-result): Do
	slime-repl-show-maximum-output at the end. This really solves
	jumping.

2010-05-07  Stas Boukarev  <stassats@gmail.com>

	* slime-presentations.el (slime-presentation-write): Reuse
	functions from slime-repl. This fixes spurious point jumps.

	* slime-repl.el (slime-repl-show-maximum-output):
	Don't search for a window of the buffer if the current window
	already displays it.
	(slime-with-output-end-mark): Removed, unused.

2010-05-05  Stas Boukarev  <stassats@gmail.com>

	* slime-tramp.el (slime-tramp-to-lisp-filename): Check if slime is
	connected, because slime-to-lisp-filename is now used for